--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
         </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>give me an idea <a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/issues">of what issues are with Essay Maker!</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
       </footer>
 
     </div>
