--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
+        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms-buttons&type=watch"
+  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
         <span class="octocat"></span>
       </footer>
 
