--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <p>give me an idea <a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/issues">of what issues are with Essay Maker!</a></p>
@@ -70,8 +69,11 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms-buttons&type=watch"
-  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms&type=watch"
+        allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&type=follow&count=true"
+        allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
         <span class="octocat"></span>
       </footer>
 
