--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span class="right-tail"></span>
         </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms&type=watch"
+        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&type=follow&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
