--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </span>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>give me an idea <a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/issues">of what issues are with Essay Maker!</a></p>
+            <p><a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/issues">Give me issues to fix!</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
