--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
+        </span>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>Upvote<a href="http://www.reddit.com/r/github/comments/28ja0z/have_or_know_of_a_project_on_github_looking_for/clbeex1"> this </a>comment!</p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
