--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>Send a<a href="http://ctt.ec/vMnmb"> tweet!</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=essay-maker-windows-forms&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
