--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Essay Maker 0.3 by sargeant45</title>
+    <title>Essay Maker</title>
   </head>
 
   <body>
