--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
         </span>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
+            <p>How you can help!</p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
             <p><a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/issues">Give me issues to fix!</a></p>
           </span>
           <span class="left-tail"></span>
