--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&type=follow&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=Essay-Maker-Windows-Forms&type=watch"
-  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=Essay-Maker-Windows-Forms&type=watch&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
   
         <span class="octocat"></span>
       </footer>
