--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </blockquote>
 
 <p>Graphic organizers on paper are old. Lucidchart did this right by making graphic organizers online. The only one they left out was the graphic essay organizer. We fixed that.
-<a href="https://drive.google.com/file/d/0B9_evHdY7ZEdNUVuczhhZTJMZFU/view?usp=sharing">Click here to download it!</a></p>
+<a href="https://www.dropbox.com/s/vvbe8kfudq53xil/EssayMaker.exe?dl=1g">Click here to download it!</a></p>
       </section>
 
       <footer>
