--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 
 <p>Graphic organizers on paper are old. Lucidchart did this right by making graphic organizers online. The only one they left out was the graphic essay organizer. We fixed that.
 <a href="https://www.dropbox.com/s/vvbe8kfudq53xil/EssayMaker.exe?dl=1g">Click here to download it!</a></p>
-      </section>
 
+<h2>Changelog</h2>
+<script src="https://gist.github.com/sargeant45/7643fc8d06e1e642b182.js"></script>
+<p><a href="https://gist.github.com/sargeant45/7643fc8d06e1e642b182"><i>PSH! You can view it here!</i></a></p>
+
+      </section>
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
