--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       })
     </script>
     <title>Essay Maker 0.5 by sargeant45 On GitHub</title>
+    <link rel="icon" 
+      type="icon/ico" 
+      href="favicon.ico" />
   </head>
 
   <body>
