--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Essay Maker 0.5 by sargeant45 On GitHub</title>
     <link rel="icon" 
       type="icon/ico" 
-      href="favicon.ico" />
+      href="EssayMaker/favicon.ico" />
   </head>
 
   <body>
