--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
         </span>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
+          <div class="container">
+            <div class="column-left"><a href="https://dl.dropboxusercontent.com/u/66449290/EssayMaker%20.EXE%20Files/EssayMaker.Windows.4.0.exe"><img src="http://i.imgur.com/fLKhX7g.png" alt="Download Essay Maker Windows Forms" style="width:304px;height:228px"></a></div>
+            <div class="column-right"><a href="https://dl.dropboxusercontent.com/u/66449290/EssayMaker%20.EXE%20Files/EssayMaker.exe"><img src="http://i.imgur.com/vVE8lUF.png" alt="Download Essay Maker WPF" style="width:304px;height:228px"></a></div>
+          </div>
+          <h3>LITE: Windows XP and Above, Low PC Requirements</h3>
+          <h3>FULL: Windows XP and Above, Higher PC Requirements, may not run well on older computers.</h3>
+          
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
             <p><a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/issues">Give me issues to fix!</a></p>
           </span>
           <span class="left-tail"></span>
