Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -17,20 +17,17 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Essay Maker 0.5 by sargeant45 On GitHub</title>
-    <link rel="icon" 
-      type="icon/ico" 
-      href="EssayMaker/favicon.ico" />
+    <title>Essay Maker 0.3 by sargeant45</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/sargeant45/Essay-Maker-Windows-Forms">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/sargeant45/EssayMaker">View on GitHub</a>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Essay Maker 0.5</h1>
+            <h1>Essay Maker 0.3</h1>
             <h2>GET RID OF THAT STUPID GRAPHIC ESSAY ORGANIZER.</h2>
           </span>
           <span class="left-tail"></span>
@@ -40,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/sargeant45/Essay-Maker-Windows-Forms/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/sargeant45/EssayMaker/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/sargeant45/EssayMaker/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -53,11 +50,45 @@
 <p>I bet if you asked a kid what they think about graphic essay organizers, they'd all despise them.</p>
 </blockquote>
 
-<p>Graphic organizers on paper are old. Lucidchart did this right by making graphic organizers online. The only one they left out was the graphic essay organizer. We fixed that.
-<a href="https://www.dropbox.com/s/vvbe8kfudq53xil/EssayMaker.exe?dl=1g">Click here to download it!</a></p>
+<p>Graphic organizers on paper are old. Lucidchart did this right by making graphic organizers online. The only one they left out was the graphic essay organizer. We fixed that.</p>
 
+<hr>
 
-  
+<h2>
+<a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
+
+<p><a href="https://db.tt/Em4bjIu7"><img src="http://i.imgur.com/fLKhX7g.png" border="0"></a></p>
+
+<h3>
+<a name="essaymaker-lite" class="anchor" href="#essaymaker-lite"><span class="octicon octicon-link"></span></a>EssayMaker Lite</h3>
+
+<h4>
+<a name="this-version-of-essaymaker-is-for-older-computers-that-dont-run-very-fast" class="anchor" href="#this-version-of-essaymaker-is-for-older-computers-that-dont-run-very-fast"><span class="octicon octicon-link"></span></a>This version of EssayMaker is for older computers that don't run very fast</h4>
+
+<h5>
+<a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
+
+<p><a href="https://db.tt/cYEJvGOx"><img src="http://i.imgur.com/vVE8lUF.png" border="0"></a></p>
+
+<h3>
+<a name="essaymaker-full" class="anchor" href="#essaymaker-full"><span class="octicon octicon-link"></span></a>EssayMaker Full</h3>
+
+<h4>
+<a name="this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well" class="anchor" href="#this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well"><span class="octicon octicon-link"></span></a>This version of EssayMaker is for newish computers that don't run pretty well.</h4>
+
+<h5>
+<a name="works-on-windows-xp-and-above-1" class="anchor" href="#works-on-windows-xp-and-above-1"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/sargeant45">sargeant45</a> can be found on <a href="https://github.com/sargeant45/EssayMaker">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
       </footer>
 
