--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Essay Maker 0.3 by sargeant45</title>
+    <title>EssayMaker One</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Essay Maker 0.3</h1>
+            <h1>EssayMaker One</h1>
             <h2>GET RID OF THAT STUPID GRAPHIC ESSAY ORGANIZER.</h2>
           </span>
           <span class="left-tail"></span>
