--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
 
-<p><a href="https://db.tt/Em4bjIu7"><img src="http://i.imgur.com/fLKhX7g.png" border="0"></a></p>
+<span class="essaymakerlite">
+  
+</span>
 
 <h3>
 <a name="essaymaker-lite" class="anchor" href="#essaymaker-lite"><span class="octicon octicon-link"></span></a>EssayMaker Lite</h3>
@@ -71,7 +73,10 @@
 <h5>
 <a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
 
-<a href="https://db.tt/cYEJvGOx"><img src="http://i.imgur.com/vVE8lUF.png" border="0"></a>
+
+<span class="essaymakerfull">
+  
+</span>
 
 
 
