--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
 
 <span class="essaymakerlite">
-  
+  <a href="https://db.tt/Em4bjIu7"></a>
 </span>
 
 <h3>
@@ -75,7 +75,7 @@
 
 
 <span class="essaymakerfull">
-  
+  <a href="https://db.tt/cYEJvGOx"></a>
 </span>
 
 
