--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
 
-<span class="essaymakerlite">
+<a class="essaymakerlite">
   <a href="https://db.tt/Em4bjIu7"></a>
-</span>
+</a>
 
 <h3>
 <a name="essaymaker-lite" class="anchor" href="#essaymaker-lite"><span class="octicon octicon-link"></span></a>EssayMaker Lite</h3>
@@ -74,9 +74,8 @@
 <a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
 
 
-<span class="essaymakerfull">
-  <a href="https://db.tt/cYEJvGOx"></a>
-</span>
+<a class="essaymakerfull">
+</a>
 
 
 
