--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
 
-<a class="essaymakerlite">
-  <a href="https://db.tt/Em4bjIu7"></a>
+<a href="https://db.tt/Em4bjIu7" id="essaymakerlite">
 </a>
 
 <h3>
@@ -74,7 +73,7 @@
 <a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
 
 
-<a class="essaymakerfull">
+<a href="https://db.tt/cYEJvGOx" id="essaymakerfull">
 </a>
 
 
