--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
 
-<a href="https://db.tt/Em4bjIu7" id="essaymakerlite">
-</a>
+<a href="https://db.tt/Em4bjIu7" id="essaymakerlite">This text will hide.</a>
 
 <h3>
 <a name="essaymaker-lite" class="anchor" href="#essaymaker-lite"><span class="octicon octicon-link"></span></a>EssayMaker Lite</h3>
@@ -73,8 +72,7 @@
 <a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
 
 
-<a href="https://db.tt/cYEJvGOx" id="essaymakerfull">
-</a>
+<a href="https://db.tt/cYEJvGOx" id="essaymakerfull">This text will hide.</a>
 
 
 
