--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
 
-<a href="https://db.tt/Em4bjIu7" id="essaymakerlite">This text will hide.</a>
+<a href="https://db.tt/Em4bjIu7"><img src="http://i.imgur.com/0hSEse4.png"></a>
+
+
 
 <h3>
 <a name="essaymaker-lite" class="anchor" href="#essaymaker-lite"><span class="octicon octicon-link"></span></a>EssayMaker Lite</h3>
@@ -72,7 +74,7 @@
 <a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
 
 
-<a href="https://db.tt/cYEJvGOx" id="essaymakerfull">This text will hide.</a>
+<a href="https://db.tt/cYEJvGOx"><img src="http://i.imgur.com/94yEtvO.png"></a>
 
 
 
