--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <a href="https://db.tt/cYEJvGOx"><img src="http://i.imgur.com/94yEtvO.png"></a>
 
 <h4>
-<a name="this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well" class="anchor" href="#this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well"><span class="octicon octicon-link"></span></a>This version of EssayMaker is for newish computers that don't run pretty well.</h4>
+<a name="this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well" class="anchor" href="#this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well"><span class="octicon octicon-link"></span></a>This version of EssayMaker is for newish computers that run pretty well..</h4>
 
 <h5>
 <a name="works-on-windows-xp-and-above-1" class="anchor" href="#works-on-windows-xp-and-above-1"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
