--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </blockquote>
 
 <p>Graphic organizers on paper are old. Lucidchart did this right by making graphic organizers online. The only one they left out was the graphic essay organizer. We fixed that.</p>
-
+<p>Try the <a href="http://sargeant45.github.io/EssayMaker/form.html">web</a> version!</p>
 <h2>Changelog</h2>
 <script src="https://gist.github.com/sargeant45/7643fc8d06e1e642b182.js"></script>
 
