--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
 		<title>form</title>
 		<meta name="author" content="admin" />
 		<!-- Date: 2014-11-10 -->
-		<link rel="stylesheet" type="text/css" href="layout.css">
+		<link rel="stylesheet" type="text/css" href="http://sargeant45.github.io/EssayMaker/layout.css">
 	</head>
 	<form>
 		Name: <input name="name" type="text">
