--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
 		<textarea rows="10" cols="95" name="conclusion">Concluding Paragraph: This paragraph should conclude your subject. e.g. using words like 'as you can see'. Tie back to your body paragraphs and use 3 sentences about them.</textarea>
 	</form>
 	<body>
-		<script src="save.js">
+		<script src="http://sargeant45.github.io/EssayMaker/save.js">
 			
 		</script>
 		<button onclick="copyToClipboard()">Copy to Clipboard</button>
