--- a/form.html
+++ b/form.html
@@ -48,5 +48,6 @@
 			
 		</script>
 		<button onclick="copyToClipboard()">Copy to Clipboard</button>
+		<button onclick="clearThePage()">Clear</button>
 	</body>
 </html>
