--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </form>
             <h4>Don't hate. Donate.</h4>
+            <h4>Find out <a href="http://sargeant45.github.io/EssayMaker/donationreasons.html">why.</a></h4>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
