--- a/donationreasons.html
+++ b/donationreasons.html
@@ -3,7 +3,7 @@
   
   </head>
   <body>
-    <div style="font-family: "Times New Roman", Times, serif;">
+    <div style="font-family: "Arial";">
       <h1>Why donate?</h1>
       <h2>DONATION GOAL: $100.00</h2>
       <p>Currently, the donation goal is $100.00. This is because of something that Microsoft puts in place to protect you from viruses, called SmartScreen. But EssayMaker One isn't a virus, just run it through your antivirus software, it won't show as one. SmartScreen requires developers to pay money every year to make their applications run without the SmartScreen warning you may get when opening up EssayMaker or other applications. It sucks.</p>
