--- a/donationreasons.html
+++ b/donationreasons.html
@@ -1,10 +1,54 @@
 <html>
   <head>
-  
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640">
+
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-56480602-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>EssayMaker One</title>
   </head>
   <body>
-    <FONT FACE="arial" align="center">
-      <h1>Why donate?</h1>
+            <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>EssayMaker One</h1>
+            <h2>GET RID OF THAT STUPID GRAPHIC ESSAY ORGANIZER.</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/sargeant45/EssayMaker/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/sargeant45/EssayMaker/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+      <section id="main_content">
+                <h1>Why donate?</h1>
       <h2>DONATION GOAL: $100.00</h2>
       <p>Currently, the donation goal is $100.00. This is because of something that Microsoft puts in place to protect you from viruses, called SmartScreen. But EssayMaker One isn't a virus, just run it through your antivirus software, it won't show as one. SmartScreen requires developers to pay money every year to make their applications run without the SmartScreen warning you may get when opening up EssayMaker or other applications. It sucks.</p>
       <hr>
@@ -19,7 +63,8 @@
 </form>
     <h4>Thanks,</h4>
     <h4>Ethan Arterberry, kid developer of EssayMaker One.</h4>
-    </FONT>
       
+      </section>
+
   </body>
 </html>
