--- a/donationreasons.html
+++ b/donationreasons.html
@@ -61,12 +61,15 @@
         <code>Smartscreen has protected your PC.</code>
         <p>Now this can be alarming, <b>unless you know what it is.</b> Smartscreen is Microsoft's way to make developers pay cold hard PayPal money so they "know" that your program isn't a virus and can be bypassed through Smartscreen. It's actually very cruel, to be honest. I'm a 12 year old. I don't have a job. EssayMaker is free, and will hopefully stay that way. The only way I can make this money is through small donations.</p>
         <h1>DON'T HATE. DONATE.</h1>
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="YYBW5D36C643A">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+        <div align="center">
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="YYBW5D36C643A">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
+        
 
       </section>
       
