--- a/index.html
+++ b/index.html
@@ -68,34 +68,7 @@
 
 <hr>
 
-<h2>
-<a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads:</h2>
-
-
-
-
-
-<h3>
-<a name="essaymaker-lite" class="anchor" href="#essaymaker-lite"><span class="octicon octicon-link"></span></a>EssayMaker Lite</h3>
-
-<a href="https://db.tt/Em4bjIu7"><img src="http://i.imgur.com/0hSEse4.png"></a>
-
-<h4>
-<a name="this-version-of-essaymaker-is-for-older-computers-that-dont-run-very-fast" class="anchor" href="#this-version-of-essaymaker-is-for-older-computers-that-dont-run-very-fast"><span class="octicon octicon-link"></span></a>This version of EssayMaker is for older computers that don't run very fast</h4>
-
-<h5>
-<a name="works-on-windows-xp-and-above" class="anchor" href="#works-on-windows-xp-and-above"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
-
-<h3>
-<a name="essaymaker-full" class="anchor" href="#essaymaker-full"><span class="octicon octicon-link"></span></a>EssayMaker Full</h3>
-
-<a href="https://db.tt/cYEJvGOx"><img src="http://i.imgur.com/94yEtvO.png"></a>
-
-<h4>
-<a name="this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well" class="anchor" href="#this-version-of-essaymaker-is-for-newish-computers-that-dont-run-pretty-well"><span class="octicon octicon-link"></span></a>This version of EssayMaker is for newish computers that run pretty well..</h4>
-
-<h5>
-<a name="works-on-windows-xp-and-above-1" class="anchor" href="#works-on-windows-xp-and-above-1"><span class="octicon octicon-link"></span></a>Works on Windows XP and above</h5>
+<h1>Downloads have moved! Go get the newest downloads over at <a href="https://github.com/sargeant45/EssayMaker/releases">GitHub releases!</a></h1>
       </section>
 
       
