--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link href="hover.css" rel="stylesheet" media="all">
     
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -102,7 +103,7 @@
         </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=Essay-Maker-Windows-Forms&type=fork&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" class=""></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&type=follow&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=Essay-Maker-Windows-Forms&type=watch&count=true"
