--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=Essay-Maker-Windows-Forms&type=fork&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" class="button float"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" class="float"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&type=follow&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20" class="button float"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20" class="float"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sargeant45&repo=Essay-Maker-Windows-Forms&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20" class="button float"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20" class="float"></iframe>
         
         <span class="octocat">
           
