--- a/form.html
+++ b/form.html
@@ -7,28 +7,28 @@
     <div class="container">
       <div class="row">
         <div class="12 columns">
-          <textarea rows="10" cols="90" name="thesis">Thesis Paragraph: This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.</textarea>
+          <textarea class="u-full-width" rows="10" cols="120" name="thesis">Thesis Paragraph: This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.</textarea>
         </div>
       </div>
       <div class="row">
         <div class="four columns">
-          <textarea rows="10" cols="30" name="topicsentence1">Topic Sentence: Say what your paragraph will be about.</textarea>
-          <textarea rows="10" cols="30" name="examples1">Examples: Give examples about why your topic sentence is true.</textarea>
-          <textarea rows="10" cols="30" name="concludingsentence1">Concluding Sentence: Conclude your paragraph and repeat the topic sentence.</textarea>
+          <textarea class="u-full-width" rows="10" cols="30" name="topicsentence1">Topic Sentence: Say what your paragraph will be about.</textarea>
+          <textarea class="u-full-width" rows="10" cols="30" name="examples1">Examples: Give examples about why your topic sentence is true.</textarea>
+          <textarea class="u-full-width" rows="10" cols="30" name="concludingsentence1">Concluding Sentence: Conclude your paragraph and repeat the topic sentence.</textarea>
         </div>
         <div class="four columns">
-          <textarea rows="10" cols="30" name="topicsentence2">Topic Sentence: Say what your paragraph will be about.</textarea>   
-          <textarea rows="10" cols="30" name="examples2">Examples: Give examples about why your topic sentence is true.</textarea>    
-          <textarea rows="10" cols="30" name="concludingsentence2">Concluding Sentence: Conclude your paragraph and repeat the topic sentence.</textarea>
+          <textarea class="u-full-width" rows="10" cols="30" name="topicsentence2">Topic Sentence: Say what your paragraph will be about.</textarea>   
+          <textarea class="u-full-width" rows="10" cols="30" name="examples2">Examples: Give examples about why your topic sentence is true.</textarea>    
+          <textarea class="u-full-width" rows="10" cols="30" name="concludingsentence2">Concluding Sentence: Conclude your paragraph and repeat the topic sentence.</textarea>
         </div>
         <div class="four columns">
-          <textarea rows="10" cols="30" name="topicsentence3">Topic Sentence: Say what your paragraph will be about.</textarea>   
-          <textarea rows="10" cols="30" name="examples3">Examples: Give examples about why your topic sentence is true.</textarea>    
-          <textarea rows="10" cols="30" name="concludingsentence3">Concluding Sentence: Conclude your paragraph and repeat the topic sentence.</textarea>
+          <textarea class="u-full-width" rows="10" cols="30" name="topicsentence3">Topic Sentence: Say what your paragraph will be about.</textarea>   
+          <textarea class="u-full-width" rows="10" cols="30" name="examples3">Examples: Give examples about why your topic sentence is true.</textarea>    
+          <textarea class="u-full-width" rows="10" cols="30" name="concludingsentence3">Concluding Sentence: Conclude your paragraph and repeat the topic sentence.</textarea>
         </div>
       <div class="row">
         <div class="12 columns">
-            <textarea rows="10" cols="95" name="conclusion">Concluding Paragraph: This paragraph should conclude your subject. e.g. using words like 'as you can see'. Tie back to your body paragraphs and use 3 sentences about them.</textarea>
+            <textarea class="u-full-width" rows="10" cols="120" name="conclusion">Concluding Paragraph: This paragraph should conclude your subject. e.g. using words like 'as you can see'. Tie back to your body paragraphs and use 3 sentences about them.</textarea>
         </div>
       </div>
       </div>
