--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="skeleton/css/skeleton.css">
   </head>
   <body>
+  <form>
     <div class="container">
       <div class="row">
         <div class="12 columns">
@@ -33,5 +34,6 @@
       </div>
       </div>
     </div>
+    </form>
   </body>
 </html>
