--- a/form.html
+++ b/form.html
@@ -6,8 +6,10 @@
   <body>
   <form>
     <div class="container">
+    
       <div class="row">
         <div class="12 columns">
+          <h1>ESSAYMAKER WEB</h1>
           <textarea class="u-full-width" rows="10" cols="120" name="thesis">Thesis Paragraph: This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.</textarea>
         </div>
       </div>
