--- a/form.html
+++ b/form.html
@@ -4,12 +4,11 @@
     <link rel="stylesheet" type="text/css" href="skeleton/css/skeleton.css">
   </head>
   <body>
-  <form>
     <div class="container">
-    
       <div class="row">
         <div class="12 columns">
           <h1>ESSAYMAKER WEB</h1>
+          <h4><em>by Ethan Arterberry</em></h4>
           <textarea class="u-full-width" rows="10" cols="120" name="thesis">Thesis Paragraph: This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.</textarea>
         </div>
       </div>
@@ -35,7 +34,11 @@
         </div>
       </div>
       </div>
+      <div class="row">
+        <div class="12 columns">
+          <button class="button-primary">Copy</button> <button>Clear</button>
+        </div>
+      </div>
     </div>
-    </form>
   </body>
 </html>
