--- a/form.html
+++ b/form.html
@@ -36,7 +36,8 @@
       </div>
       <div class="row">
         <div class="12 columns">
-          <button class="button-primary">Copy</button> <button>Clear</button>
+          <button class="button-primary">Copy</button> 
+          <button>Clear</button>
         </div>
       </div>
     </div>
