--- a/form.html
+++ b/form.html
@@ -11,6 +11,8 @@
           <h1>ESSAYMAKER WEB</h1>
           <h4><em>by Ethan Arterberry</em></h4>
           <input type="text" id="inputFileNameToSaveAs" placeholder="Title">
+          <input type="text" name="name" placeholder="Name">
+          <input type="text" name="teachername" placeholder="Name">
           <textarea class="u-full-width" rows="10" cols="120" name="thesis">Thesis Paragraph: This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.</textarea>
           
         </div>
