--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
           <h6><em>by Ethan Arterberry</em></h6>
           <input type="text" id="inputFileNameToSaveAs" placeholder="Title">
           <input type="text" name="name" placeholder="Name">
-          <input type="text" name="teachername" placeholder="Name">
+          <input type="text" name="teachername" placeholder="Teacher's Name">
           <textarea class="u-full-width" rows="10" cols="120" name="thesis">Thesis Paragraph: This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.</textarea>
           
         </div>
