--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
+    <meta name="Description" content="An awesome tool that will improve your essay writing speed
+    and keep your grade up. Free and open-source, its definitely worth checking out."
 
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
@@ -29,7 +31,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>EssayMaker One</title>
+    <title>EssayMaker</title>
   </head>
 
   <body>
