--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
     <meta name="Description" content="An awesome tool that will improve your essay writing speed
-    and keep your grade up. Free and open-source, its definitely worth checking out."
+    and keep your grade up. Organize your essay and immediately get an output that you can turn in. It's free, open source,
+    and intuitive."
 
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
