--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <body>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54c17223655ba63d" async="async"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54c17223655ba63d" async="async"></script>
 
 <script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
