--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
       <div class="container">
         {% capture foottext %} {% include footer.md %} {% endcapture %}
         {{ foottext | markdownify }}
+        
+        <a href="thenameofthispageissecret.html"><img src="http://i.imgur.com/RgIDkRs.png"></a>
       </div>
     </div>
   </div>
