--- a/thenameofthispageissecret.html
+++ b/thenameofthispageissecret.html
@@ -3,6 +3,6 @@
     
   </head>
   <body>
-    <iframe name="myframe" src="http://orteil.dashnet.org/cookieclicker/" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=auto></iframe>
+    <iframe name="myframe" src="http://orteil.dashnet.org/cookieclicker/" style="width: 100%; height: auto;" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=auto></iframe>
   </body>
 </html>
