--- a/thenameofthispageissecret.html
+++ b/thenameofthispageissecret.html
@@ -3,6 +3,7 @@
     
   </head>
   <body>
-    <iframe name="myframe" src="http://orteil.dashnet.org/cookieclicker/" style="width: 100%; height: auto;" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=auto></iframe>
+    <h1 style="text-align: center;">nobody even uses RSS anymore.</h1>
+    <iframe name="myframe" src="http://orteil.dashnet.org/cookieclicker/" style="width: 100%; height: 100%;" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=auto></iframe>
   </body>
 </html>
