--- a/thenameofthispageissecret.html
+++ b/thenameofthispageissecret.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <h1 style="text-align: center;">nobody even uses RSS anymore.</h1>
