--- a/thenameofthispageissecret.html
+++ b/thenameofthispageissecret.html
@@ -3,7 +3,7 @@
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1 style="text-align: center;">nobody even uses RSS anymore.</h1>
+    <h1 style="text-align: center; font-family: 'Slabo 27px', serif;">nobody even uses RSS anymore.</h1>
     <iframe name="myframe" src="http://orteil.dashnet.org/cookieclicker/" style="width: 100%; height: 100%;" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=auto></iframe>
   </body>
 </html>
