--- a/old_website/form.html
+++ b/old_website/form.html
@@ -2,6 +2,7 @@
   <head>
     <title>EssayMaker Web</title>
     <link rel="stylesheet" type="text/css" href="skeleton/css/skeleton.css">
+    <link rel="stylesheet" type="text/css" href="form.css"
     
   </head>
   <body>
