move to coffeescript and continue design work

--- a/index.html
+++ b/index.html
@@ -20,31 +20,38 @@
       <h1>EssayMaker</h1>
 
       <hr>
-
-      <textarea class="para" id="thesis" placeholder="This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.)"></textarea>
+      
+      <p class="part-label collapse lth">Thesis Paragraph</p>
+      <textarea class="para" id="th" onfocus="titleShow('th', '')" onblur="titleHide('lth')" placeholder="This paragraph should include a topic sentence, 3 examples (that will tie back to your body paragraph's topics about your topic, and a concluding sentence that repeats the main point.)"></textarea>
 
       <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-4">
-          <p class="part-label">Topic Sentence</p>
-          <textarea id="ts1" class="part" placeholder="Say what your paragraph will be about."></textarea>
-          <p class="part-label">Examples</p>
-          <textarea id="ex1" class="part" placeholder="Give examples about why your topic sentence is true."></textarea>
-          <p class="part-label">Concluding Sentence</p>
-          <textarea id="cs1" class="part" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
+          <p class="part-label collapse lts1">Topic Sentence</p>
+          <textarea id="ts1" class="part" onfocus="titleShow('ts', '1')" onblur="titleHide('ts', '1')" placeholder="Say what your paragraph will be about."></textarea>
+          <p class="part-label collapse lex1">Examples</p>
+          <textarea id="ex1" class="part" onfocus="titleShow('ex', '1')" onblur="titleHide('ex', '1')" placeholder="Give examples about why your topic sentence is true."></textarea>
+          <p class="part-label collapse lcs1">Concluding Sentence</p>
+          <textarea id="cs1" class="part" onfocus="titleShow('cs', '1')" onblur="titleHide('cs', '1')" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4">
-          <textarea id="ts2" class="part" placeholder="Say what your paragraph will be about."></textarea>
-          <textarea id="ex2" class="part" placeholder="Give examples about why your topic sentence is true."></textarea>
-          <textarea id="cs2" class="part" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
+          <p class="part-label collapse lts2">Topic Sentence</p>
+          <textarea id="ts2" class="part" onfocus="titleShow('ts', '2')" onblur="titleHide('ts', '2')" placeholder="Say what your paragraph will be about."></textarea>
+          <p class="part-label collapse lex2">Examples</p>
+          <textarea id="ex2" class="part" onfocus="titleShow('ex', '2')" onblur="titleHide('ex', '2')" placeholder="Give examples about why your topic sentence is true."></textarea>
+          <p class="part-label collapse lcs2">Concluding Sentence</p>
+          <textarea id="cs2" class="part" onfocus="titleShow('cs', '2')" onblur="titleHide('cs', '2')" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4">
-          <textarea id="ts3" class="part" placeholder="Say what your paragraph will be about."></textarea>
-          <textarea id="ex3" class="part" placeholder="Give examples about why your topic sentence is true."></textarea>
-          <textarea id="cs3" class="part" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
+          <p class="part-label collapse lts3">Topic Sentence</p>
+          <textarea id="ts3" class="part" onfocus="titleShow('ts', '3')" onblur="titleHide('ts', '3')" placeholder="Say what your paragraph will be about."></textarea>
+          <p class="part-label collapse lex3">Examples</p>
+          <textarea id="ex3" class="part" onfocus="titleShow('ex', '3')" onblur="titleHide('ex', '3')" placeholder="Give examples about why your topic sentence is true."></textarea>
+          <p class="part-label collapse lcs3">Concluding Sentence</p>
+          <textarea id="cs3" class="part" onfocus="titleShow('cs', '3')" onblur="titleHide('cs', '3')" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
         </div>
       </div>
-
-      <textarea class="para" id="thesis" placeholder="This paragraph should conclude your subject. e.g. using words like 'as you can see'. Tie back to your body paragraphs and use 3 sentences about them."></textarea>
+      <p class="part-label collapse lco">Concluding Paragraph</p>
+      <textarea class="para" id="co" onfocus="titleShow('co', '')" onblur="titleHide('co', '')" placeholder="This paragraph should conclude your subject. e.g. using words like 'as you can see'. Tie back to your body paragraphs and use 3 sentences about them."></textarea>
     </div>
 
     <!-- scripts -->
@@ -52,6 +59,6 @@
     <script src="lib/bs/bootstrap.min.js"></script>
     <script src="lib/marked.min.js"></script>
     <script src="lib/sentimood.min.js"></script>
-    <script src="src/script.js"></script>
+    <script src="src/js/context.js"></script>
   </body>
 </html>
